# DeskApp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  README.txt  chatter.py  client.py  client.txt  errors.txt  extest.sh  fireapp.py  game.py  install.sh  log.txt  onefile.py  pyproject.toml  requirements-dev.txt  requirements.txt  serv.py  setup.py  t.py  test.ipynb  test.py  test.sh  test_branch.sh  try.ipynb  users.data.backup
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  changelog.ai  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-drafter.yml
deskapp/: __init__.py  __main__.py  app.py  backend.py  cli.py  f.py  frontend.py  game_client.py  keys.py  logic.py  module.py  test.py
deskapp.old/: README.md  __init__.py  __main__.py
deskapp.old/mods/: README.md  __init__.py  about.py  buttons.py  fire.py
deskapp.old/server/: __main__.py
deskapp.old/src/: app.py  backend.py  callback.py  cli.py  draw.py  frontend.py  logic.py  module.py
deskapp/apis/: __init__.py  base.py  keys.py  registry.py
deskapp/apis/stubs/: gemini.py  hugface.py  ollama.py  openai.py
deskapp/aws/: __init__.py  __main__.py  config.example.toml  config.py
deskapp/aws/mods/: __init__.py  startup.py
deskapp/deskchat/: __main__.py
deskapp/deskchat/client/: __init__.py  manager.py
deskapp/deskchat/mods/: __init__.py  chat.py  log.py  login.py  settings.py  status.py  test.py  users.py
deskapp/deskchat/server/: manager.py
deskapp/game/: __init__.py  chat.py
deskapp/mods/: __init__.py  about.py  apt.py  buttons.py  fire.py  fireapp.py  hunter.py  memory_viewer.py
deskapp/serv/: path.ipynb  server.py
deskapp/server/: README.md  __init__.py  __main__.py
deskapp/server/src/: client.py  engine.py  error.py  message.py  server.py  session.py  user.py
deskapp/src/: app.py  backend.py  callback.py  cli.py  curse.py  events.py  frontend.py  keys.py  logic.py  memory.py  module.py  store.py  test.py  widgets.py  worker.py
deskapp/webapp/: __init__.py  server.py
examples/: 00_hello.py  01_panels.py  02_module.py  03_callbacks.py  04_layouts.py  05_styling.py  06_data_sharing.py  07_IMPLEMENTATION_SUMMARY.md  07_events.py  08_complete_app.py  09_multiline_input.py  DUNGEON_CRAWLER_RPG.md  README.md  THREADING.md  battle_test.py  deskhunter.py  dungeon_crawler_rpg.py  ex_0.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_async_fetch.py  ex_box_test.py  ex_event_basic.py  ex_floating_test.py  ex_fps_test.py  ex_mouse_events.py  ex_refresh_test.py  ex_right_info.py  ex_store.py  ex_widgets.py  ex_worker_test.py  game.py  memory_leak_demo.py  memory_test.py  memory_viewer_demo.py  test_events.py  test_floating.md
examples/rpg_game/: __init__.py  art_assets.py  dungeon_crawler.py  game_data.py  game_mechanics.py
game/: game.py
game/Client/: __init__.py  game_client.py
game/Client/game/: chat.py  client.py  login.py  map.py
game/Server/: client.py  game.py  messages.py  push.sh  server.py
new/: new.py
new/persona/: gemma3.txt  rules.txt  wizard.txt
scripts/: precommit.sh
sidedesk/: __init__.py  __main__.py  tone.txt
sidedesk/backend/: __init__.py  bot_worker.py  mcp_manager.py  ollama_client.py  vector_store.py
sidedesk/client/: manager.py
sidedesk/config/: __init__.py  config_loader.py  ollama.example.toml
sidedesk/mods/: __init__.py  chat.py  gemini.py  hugface.py  login.py  ollama.py  openai.py  settings.py  status.py  test.py  users.py
sidedesk/server/: __init__.py  daemon.py  manager.py
var/cache/chatter/0/: 0
