[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Deskapp"
# bumped to 0.1.2 by GPT5 10-07-25 adding right/info panels
# bumped to 0.1.3 by GPT5 10-07-25 reverting info panel to 3-line spec
# bumped to 0.1.4 by GPT5 10-07-25 expanding info panel to 5 with 3 writable lines
# bumped to 0.1.5 by GPT5 10-07-25 fix side panel module retrieval & visibility
# bumped to 0.1.6 by GPT5 10-07-25 cleanup remove debug artifacts for side panels
# bumped to 0.1.7 by GPT5 10-07-25 unify side panel toggle logic & remove forced redraw
# bumped to 0.1.8 by GPT5 10-07-25 refine right panel height conditional logic
# bumped to 0.1.9 by GPT5 10-07-25 centralize layout math & unify width logic
# bumped to 0.1.10 by GPT5 10-07-25 add safety clamps preventing zero-size panels
# bumped to 0.1.11 by GPT5 10-07-25 add safe_addstr clipping in curse.py
# bumped to 0.1.12 by GPT5 10-07-25 align right panel vertical span with menu
# bumped to 0.1.13 by GitHub Copilot 10-09-25 add BotWorker, wrapped chat
# bumped to 0.1.14 by GitHub Copilot 10-09-25 typing indicator + Home/End
# bumped to 0.1.15 by GitHub Copilot 10-09-25 add Ollama profile scroller
# bumped to 0.1.16 by GitHub Copilot 10-09-25 chat paging + spacing
# bumped to 0.1.17 by Claude Sonnet 4.5 10-09-25 global box parameter fix
# bumped to 0.1.18 by Claude Sonnet 4.5 10-09-25 clean panel refresh
# bumped to 0.1.19 by Claude Sonnet 4.5 10-09-25 FPS tracking system
# bumped to 0.1.20 by Claude Sonnet 4.5 10-09-25 floating panel overlay
# bumped to 0.1.21 by Claude Sonnet 4.5 10-10-25 floating z-order fix
# bumped to 0.1.22 by Claude Sonnet 4.5 10-10-25 event system + threading
# bumped to 0.1.23 by Claude Sonnet 4.5 10-10-25 tutorial examples
# bumped to 0.1.24 by Claude Sonnet 4.5 10-10-25 fix panel refs in examples
# bumped to 0.2.1 by Claude Sonnet 4.5 10-10-25 memory monitoring (Proposal 11 S1)
# bumped to 0.2.2 by Claude Sonnet 4.5 10-10-25 memory viewer module (Proposal 11 S2)
# bumped to 0.2.3 by Claude Sonnet 4.5 10-10-25 leak detection (Proposal 11 S3)
# bumped to 0.2.4 by GitHub Copilot 10-12-25 mouse events + menu click (P13)
# bumped to 0.2.5 by GitHub Copilot 10-27-25 dynamic chat word wrap (P30)
# bumped to 0.3.0 by GitHub Copilot 10-27-25 threaded comms (P31)
version = "0.3.0"
description = "An Open Source terminal-based app framework and server."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ruckusist", email = "ruckusist@outlook.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Programming Language :: Python",
]
dependencies = [
    "bcrypt",
    "boto3",
    "flask",
    "ollama",
    "chromadb",
    "mcp",
    "psutil"
]

[project.urls]
Homepage = "https://deskapp.org"

[project.scripts]
deskapp = "deskapp.__main__:main"
sidedesk = "sidedesk.__main__:main"
deskchat = "deskapp.deskchat.__main__:main"
deskapp-aws = "deskapp.aws.__main__:main"

[tool.setuptools]
packages = { find = { include = ["deskapp*", "sidedesk*"] } }
include-package-data = true

[tool.ruff]
line-length = 100
# Target the minimum supported Python version
target-version = "py38"
# Common directories to exclude from linting/formatting
exclude = [
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
# Enable a focused, useful rule set:
# E,F = pycodestyle/pyflakes; I = isort; B = flake8-bugbear; UP = pyupgrade; S = bandit
select = ["E", "F", "I", "B", "UP", "S"]
# Ignore assert usage in tests and scripts (S101), which is often acceptable
ignore = ["S101"]

[tool.ruff.format]
# Use Ruff as the formatter (via pre-commit hook)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
# Format code blocks inside docstrings
docstring-code-format = true
